Add pkexec policy (Bug #11088)
This adds a pkexec policy file to mousepad. This way if the user
of a desktop system wants to use mousepad to edit a file as root
and has the proper credentials they can.
pkexec comes from polkit which does about the same thing as
sudo/gtksu except also supports authentication methods like
fingerprint or smart card readers.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,17 @@ desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
+
+polkit_policydir = $(datadir)/polkit-1/actions
+polkit_in_in_files =			\
+	org.xfce.mousepad.policy.in.in
+polkit_in_files = $(polkit_in_in_files:.policy.in.in=.policy.in)
+%.policy.in: %.policy.in.in
+	sed -e "s,\@bindir\@,$(bindir),g" < $< > $@
+polkit_policy_DATA = $(polkit_in_files:.policy.in=.policy)
+@INTLTOOL_POLICY_RULE@
+
+
 .PHONY: ChangeLog
 
 ChangeLog: Makefile
@@ -29,13 +40,16 @@ EXTRA_DIST =									\
 	intltool-extract.in							\
 	intltool-merge.in							\
 	intltool-update.in							\
-	$(desktop_in_in_files)
+	$(desktop_in_in_files)						\
+	$(polkit_in_in_files)
 
 DISTCLEANFILES =								\
 	intltool-extract							\
 	intltool-merge								\
 	intltool-update								\
 	$(desktop_in_files)							\
-	$(desktop_DATA)
+	$(desktop_DATA)								\
+	$(polkit_in_files)							\
+	$(polkit_policy_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
