--- a/configure.ac.in
+++ b/configure.ac.in
@@ -47,7 +47,7 @@ AC_PROG_CC()
 AM_PROG_CC_C_O()
 AC_PROG_LD()
 AC_PROG_INSTALL()
-AC_PROG_INTLTOOL()
+IT_PROG_INTLTOOL()
 AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl **************************
@@ -96,7 +96,7 @@ AC_ARG_ENABLE([gtk3],
               [enable_gtk3=auto])
 
 AS_IF([test "x$enable_gtk3" = "xyes"],
-      [PKG_CHECK_MODULES([GTK], [gtk+-3.0])])
+      [PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 3.20])])
 
 AS_IF([test "x$enable_gtk3" = "xauto"],
       [PKG_CHECK_MODULES([GTK], [gtk+-3.0],
