Read system font from xfconf property (Bug #12485)

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -72,6 +72,7 @@ mousepad_CFLAGS = \
 	$(GTHREAD_CFLAGS) \
 	$(GTKSOURCEVIEW_CFLAGS) \
 	$(PLATFORM_CFLAGS) \
+	$(XFCONF_CFLAGS) \
 	-DMOUSEPAD_GSETTINGS_SCHEMA_DIR=\""$(datadir)/glib-2.0/schemas"\"
 
 mousepad_LDFLAGS = \
@@ -82,7 +83,8 @@ mousepad_LDADD = \
 	$(GLIB_LIBS) \
 	$(GTK_LIBS)	\
 	$(GTHREAD_LIBS) \
-	$(GTKSOURCEVIEW_LIBS)
+	$(GTKSOURCEVIEW_LIBS) \
+	$(XFCONF_LIBS)
 
 if HAVE_DBUS
 mousepad_built_sources +=	\
