--- a/configure.ac.in
+++ b/configure.ac.in
@@ -126,11 +126,22 @@ AC_ARG_ENABLE([keyfile-settings],
 AM_CONDITIONAL([WITH_KEYFILE_SETTINGS],
                [test "x$enable_keyfile_settings" = "xyes"])
 
-dnl **********************************
-dnl *** Optional support for D-BUS ***
-dnl **********************************
-XDT_CHECK_OPTIONAL_PACKAGE([DBUS], [dbus-1],
-                           [0.34], [dbus], [D-BUS support])
+dnl ***********************************
+dnl *** Check for gdbus-codegen ***
+dnl ***********************************
+AC_ARG_ENABLE([dbus],
+              [AS_HELP_STRING([--enable-dbus],
+                              [Enable DBUS support])],
+              [enable_dbus=$enableval],
+              [enable_dbus="yes"])
+
+AM_CONDITIONAL([HAVE_DBUS], [test "x$enable_dbus" = "xyes"])
+
+AS_IF([test "x$enable_dbus" = "xyes"],
+[
+  AC_PATH_PROG([GDBUS_CODEGEN], [gdbus-codegen])
+  AC_DEFINE([HAVE_DBUS], [1], [Define if DBUS support is enabled])
+])
 
 dnl ***************************************************
 dnl *** Check for tools required in maintainer mode ***
@@ -181,11 +192,7 @@ dnl ***************************
 echo
 echo "Build Configuration:"
 echo
-if test x"$DBUS_FOUND" = x"yes"; then
-echo "* D-BUS support:             yes"
-else
-echo "* D-BUS support:             no"
-fi
+echo "* D-BUS support:             $enable_dbus"
 echo "* Debug Support:             $enable_debug"
 echo "* Use keyfile backend:       $enable_keyfile_settings"
 echo "* Build with GTK+ 3:         $enable_gtk3"
