--- a/configure.ac.in
+++ b/configure.ac.in
@@ -19,7 +19,7 @@ dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2007-2010
         The Xfce development team. All rights reserved.])
-AC_INIT([Mousepad], [mousepad_version], [http://bugzilla.xfce.org/], [mousepad])
+AC_INIT([Mousepad], [mousepad_version], [https://bugzilla.xfce.org/], [mousepad])
 AC_PREREQ([2.50])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CANONICAL_TARGET()
