Add appdata file (Bug #11200)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -32,6 +32,11 @@ mousepad/mousepad-window.c
 mousepad.desktop.in.in
 
 #
+# Appdata Files
+#
+mousepad.appdata.xml.in
+
+#
 # Polkit File
 #
 org.xfce.mousepad.policy.in.in
