--- a/configure.ac.in
+++ b/configure.ac.in
@@ -85,32 +85,8 @@ dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.42.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.42.0])
 XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.12.0])
-
-dnl **********************
-dnl *** GTK+ 3 support ***
-dnl **********************
-
-AC_ARG_ENABLE([gtk3],
-              [AS_HELP_STRING([--enable-gtk3],
-                              [Build against GTK+ 3 instead of GTK+ 2])],
-              [enable_gtk3=$enableval],
-              [enable_gtk3=auto])
-
-AS_IF([test "x$enable_gtk3" = "xyes"],
-      [PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 3.20])])
-
-AS_IF([test "x$enable_gtk3" = "xauto"],
-      [PKG_CHECK_MODULES([GTK], [gtk+-3.0],
-                         [enable_gtk3=yes], [enable_gtk3=no])])
-
-AS_IF([test "x$enable_gtk3" = "xno"],
-      [PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.24])])
-
-AS_IF([test "x$enable_gtk3" = "xyes"],
-      [PKG_CHECK_MODULES([GTKSOURCEVIEW], [gtksourceview-3.0])],
-      [PKG_CHECK_MODULES([GTKSOURCEVIEW], [gtksourceview-2.0])])
-
-AM_CONDITIONAL([WITH_GTK3], [test "x$enable_gtk3" = "xyes"])
+XDT_CHECK_PACKAGE([GTK], [gtk+-3.0], [3.20.0])
+XDT_CHECK_PACKAGE([GTKSOURCEVIEW], [gtksourceview-3.0], [3.20.0])
 
 dnl ************************************
 dnl *** Enable support for GSettings ***
@@ -196,5 +172,4 @@ echo
 echo "* D-BUS support:             $enable_dbus"
 echo "* Debug Support:             $enable_debug"
 echo "* Use keyfile backend:       $enable_keyfile_settings"
-echo "* Build with GTK+ 3:         $enable_gtk3"
 echo
