Bug #16717: Move from exo-csource to xdt-csource
- exo-csource is deprecated and moved to xdt-csource
- Bump minimal xdt version

--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = \
+AM_CPPFLAGS = \
 	-I$(top_builddir) \
 	-I$(top_srcdir) \
 	-DBINDIR=\"$(bindir)\" \
@@ -127,10 +127,10 @@ mousepad-dbus-infos.c mousepad-dbus-infos.h: mousepad-dbus-infos.xml Makefile
 endif
 
 mousepad-window-ui.h: mousepad-window-ui.xml Makefile
-	$(AM_V_GEN) exo-csource --strip-comments --strip-content --static --name=mousepad_window_ui $< > $@
+	$(AM_V_GEN) xdt-csource --strip-comments --strip-content --static --name=mousepad_window_ui $< > $@
 
 mousepad-prefs-dialog-ui.h: mousepad-prefs-dialog.glade Makefile
-	$(AM_V_GEN) exo-csource --strip-comments --strip-content --static --name=mousepad_prefs_dialog_ui $< > $@
+	$(AM_V_GEN) xdt-csource --strip-comments --strip-content --static --name=mousepad_prefs_dialog_ui $< > $@
 
 mousepad-marshal.h: mousepad-marshal.list Makefile
 	$(AM_V_GEN) glib-genmarshal --header --prefix=_mousepad_marshal $< > $@
