--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ mousepad/mousepad-marshal.h
 /mousepad/mousepad-settings.gschema.valid
 /mousepad/org.xfce.mousepad.gschema.valid
 mousepad/mousepad-window-ui.h
-po/.intltool-merge-cache
+po/.intltool-merge-cache*
 po/POTFILES
 po/stamp-it
 stamp-h1
